--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@200&family=Text+Me+One&display=swap" rel="stylesheet">  
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
     <title>Menu</title>
 </head>
 <body>
     <nav class="links">
-        <label for="rd_inicio">Inicio</label>
-        <label for="rd_sobre">Sobre</label>
-        <label for="rd_portifolio">Portifolio</label>
-        <label for="rd_contato">Contato</label>
-        <label for="rd_noticias">Noticias</label>
+        <label for="rd_inicio">INICIO</label>
+        <label for="rd_sobre">SOBRE</label>
+        <label for="rd_portifolio">PORTFÓLIO</label>
+        <label for="rd_contato">CONTATO</label>
+        <label for="rd_noticias">NOTICIAS</label>
 
     </nav>
     <div class="scroll">    
