--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
             <div>
 
-                <img src="img/telefone.png" alt="" class="contat">
-                <img src="img/email.png" alt="" class="contat">
+               <a href="https://api.whatsapp.com/send?phone=5588997312440" target="_blank"> <img src="img/telefone.png" alt="" class="contat"></a>
+               <a href="mailto:joathaandrade2@gmailcom?Subject=Título%20da%20mensagem" target="_blank"> <img src="img/email.png" alt="" class="contat"></a>
                 <img src="img/insta.png" alt="" class="contat">
             </div>
 
